style.css
    header {
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      z-index: 3000;
      display: flex;
      align-items: center;
      background-color: rgb(25,25,25);
      padding: 1rem;
      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
    }

    #username, #password, #email, #newPassword, #oldPassword {
      font-size: 0.875rem;
      padding: 6px 12px;
      border: 1px solid rgb(140, 140, 140);
      border-radius: 4px;
      outline-offset: 2px;
      width: 150px;
      height: 28px;
    }

    .menu-toggle {
      background: none;
      border: none;
      cursor: pointer;
      margin-right: 1rem;
    }

    .menu-icon {
      width: 24px;
      height: 24px;
      fill: #ffffff;
    }

    .close-icon {
      width: 24px;
      height: 24px;
      fill: #161616;
    }

    .title {
      position: relative;
      font-size: 1.25rem;
      font-weight: 600;
      color: #ffffff;
    }

    .fullscreen-menu {
      position: fixed;
      /*top: 64px; /* height of header */
      top: 0px;
      left: 0;
      width: 100%;
      /* height: calc(100% - 64px); */
      height: 100%;
      background: #f4f4f4;
      display: none;
      flex-direction: column;
      /* z-index: 2000; */
      z-index: 5000;
    }

    .fullscreen-menu.active {
      display: flex;
    }

    .fullscreen-header {
      display: flex;
      justify-content: flex-end;
      padding: 1rem;
    }

    .close-btn {
      background: none;
      border: none;
      cursor: pointer;
      position: absolute;
      left: 16px;
    }

    .fullscreen-nav {
      flex: 1;
      display: flex;
      flex-direction: column;
      align-items: center;
      /* justify-content: center; */
    }

    .fullscreen-nav a {
      margin: 1rem;
      font-size: 1.5rem;
      text-decoration: none;
      color: #161616;
    }

    /* Padding for page content */
    #page-content {
      padding-top: 64px;
    }



body {
  background: #2e2e2e;
  color: #fff;
  padding: 20px;
  font-family: 'IBM Plex Sans', sans-serif;
}

html {
  box-sizing: content-box !important;
}

*, *::before, *::after {
  box-sizing: inherit !important;
}



#pedalAddDropdownContainer {
  background: white;
  max-height: 300px;
  overflow-y: auto;
  width: 200px; /* or same width as input */
  z-index: 1000;
}




#catalog {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  justify-content: center;
  overflow-x: hidden; /* hides horizontal scrollbar */
  max-width: 100vw;   /* constrain max width to viewport */
  white-space: normal; /* allow wrapping if inline-block used */
}

#preset {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow-x: hidden; /* hides horizontal scrollbar */
  max-width: 100vw;   /* constrain max width to viewport */
  white-space: normal; /* allow wrapping if inline-block used */
}

#pedalboard {
  display: flex;
  flex-direction: column;
  gap: 10px;
  align-items: center;
}

.pedal-catalog, .pedal {
  border-radius: 10px;
  padding: 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}


.pedal-name {
  position: absolute;
  bottom: 5px;
  left: 50%;
  transform: translateX(-50%);
  white-space: nowrap; /* optional: prevents line breaks */
  text-align: center;
  width: max-content; /* make sure it wraps around content size */
}

.head-name {
  position: absolute;
}

.row {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin: 4px 0;
}

.row > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start; /* Align children to top */
  gap: 0px;
  min-width: 40px;
}

.row.lowest-row > div {
  min-width: 0px;
}

.row > div > select {
  margin-bottom: 10px;
}

#pedalboardSelect, #presetSelect {
  height: 40px;
  font-size: initial;
}

#pedalFilterInput {
  height: 13px;
}

.lower-row {
  position: relative;
  top: 50px;
}

.lowest-row {
  position: relative;
  top: 85px;
}

.knob-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start; /* knob aligned top */
  height: 60px; /* fixed height to keep alignment */
}

.knob {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  position: relative;
  transform: rotate(0deg);
  cursor: pointer;
}

.knob::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 50%;
  transform: translateX(-50%);
  width: 4px;
  height: 10px;
  border-radius: 2px;
  background-color: var(--indicator-color, #fff);
}

.smallknob {
  width: 26px;
  height: 26px;
  border-radius: 50%;
  position: relative;
  cursor: pointer;
  margin-bottom: 4px;
}

.smallknob::after {
  content: '';
  position: absolute;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 3px;
  height: 8px;
  border-radius: 1px;
  background-color: var(--indicator-color, #fff);
}

.largeknob {
  width: 52px;
  height: 52px;
  border-radius: 50%;
  position: relative;
  cursor: pointer;
  margin-bottom: 4px;
}

.largeknob::after {
  content: '';
  position: absolute;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 3px;
  height: 8px;
  border-radius: 1px;
  background-color: var(--indicator-color, #fff);
}

.xlargeknob {
  width: 75px;
  height: 75px;
  border-radius: 50%;
  position: relative;
  cursor: pointer;
  margin-bottom: 4px;
}

.xlargeknob::after {
  content: '';
  position: absolute;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 3px;
  height: 8px;
  border-radius: 1px;
  background-color: var(--indicator-color, #fff);
}

.knob-value-label {
  font-size: 12px;
  font-weight: bold;
  color: inherit;
  user-select: none;
  text-align: center;
}

.label-top {
  text-align: center;
  font-size: 12px;
  margin-bottom: 2px;
}

.led {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  margin-top: 4px;
  transition: box-shadow 0.3s ease;
  z-index: 10;
}



.row > div > .led,
.row > div > input[type="checkbox"] {
  margin-top: 4px;
  align-self: center;
}


.knob,
.smallknob,
.largeknob,
.xlargeknob {
  box-sizing: border-box;
}


.knob,
.smallknob,
.largeknob,
.xlargeknob {
  aspect-ratio: 1 / 1;
  flex-shrink: 0;
}



.align-left {
  position: absolute;
  left: 12px;
}

.align-right {
  position: absolute;
  right: 12px;
}

.align-bottom {
  margin-top: 25px;
}

.align-top {
  margin-top: -15px;
}

.align-top-est {
  margin-top: -125px;
}




.slider-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 -12px;
}

input[type="range"].vertical {
  writing-mode: bt-lr;
  appearance: slider-vertical;
  width: 8px;
  height: 100px;
  background: transparent;
}

input[type="range"].verticalsmall {
  writing-mode: bt-lr;
  appearance: slider-vertical;
  width: 8px;
  height: 50px;
  background: transparent;
}

input[type="range"].horizontal {
  width: 100%;
  height: 6px;
}

.slider-label {
  margin-bottom: 4px;
  font-size: 12px;
}
















    #catalog, #selected-pedals { margin-top: 1rem; min-height: 2rem; }

    .pedal-item {
      cursor: pointer;
      padding: 5px 10px;
      border: 1px solid #ccc;
      margin: 5px;
      display: inline-block;
      border-radius: 4px;
      background-color: white;
      position: relative;
      box-shadow: #000000 0 0 8px 3px;
    }
    .pedal-item:hover:not(.selected-catalog) { background-color: #eef; }
    .pedal-item.selected-catalog {
      background-color: #ddd;
      color: #888;
      cursor: default;
    }
    .pedal-item.selected-board {
      background-color: #fff5e6;
      cursor: grab;
    }
    .delete-btn {
      position: absolute;
      top: -8px;
      right: -8px;
      background: red;
      color: white;
      border: none;
      border-radius: 50%;
      font-size: 12px;
      cursor: pointer;
    }
    .edit-btn {
      position: fixed;
      top: -5%;
      right: -5%;
      background: #0f62fe; /* Blue background */
      border: none;
      border-radius: 50%;
      cursor: pointer;
      width: 24px;
      height: 24px;
      padding: 0;
      display: flex;
      align-items: center;
      justify-content: center;
      box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
    }

    .edit-btn svg {
      width: 16px;
      height: 16px;
      fill: white;
      pointer-events: none;
    }


    #selected-pedals {
      display: flex;
      flex-wrap: wrap;
      gap: 8px;
    }
    .drag-over {
      border: 2px dashed #555;
    }
    .dragging {
      opacity: 0.5;
    }


    .rotate-btn {
     position: absolute;
      bottom: -8px;
      right: -8px;
      background: #0078d7;
      color: white;
      border: none;
      border-radius: 50%;
      font-size: 12px;
      cursor: pointer;
    }











.bx--loading-overlay {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 999;
  background: none;
}




.bx--text-input {
  border-radius: 8px;
}

.bx--btn {
  margin-left: 8px;
  min-height: 0.5rem;
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px;
  max-width: 8rem!important;
}










@font-face {
  font-family: bigmuff;
  src: url("fonts/ITC Pioneer Regular.otf");
}
@font-face {
  font-family: boss;
  src: url("fonts/BossStyle-Bold.otf");
}
@font-face {
  font-family: amped;
  src: url("fonts/BebasNeue-Regular.otf");
}
@font-face {
  font-family: mxr;
  src: url("fonts/eurostile.TTF");
}
@font-face {
  font-family: tsmini;
  src: url("fonts/Schluber.otf");
}
@font-face {
  font-family: sp;
  src: url("fonts/Lobster-Regular.ttf");
}
@font-face {
  font-family: orangeamps;
  src: url("fonts/AmpedOrange.ttf");
}
@font-face {
  font-family: marshall;
  src: url("fonts/Amplify_PersonalUseOnly.ttf");
}
@font-face {
  font-family: vox;
  src: url("fonts/PlayfairDisplay-Black.ttf");
}
@font-face {
  font-family: bubbly;
  src: url("fonts/Talina.otf");
}
@font-face {
  font-family: ibanez;
  src: url("fonts/SecretAgentPersonalUse-vPzE.ttf");
}
@font-face {
  font-family: fender;
  src: url("fonts/StratoRegular-2d5o.ttf");
}
@font-face {
  font-family: walrus;
  src: url("fonts/acumin-pro-condensed.otf");
}
@font-face {
  font-family: yamaha;
  src: url("fonts/yamaha.ttf");
}
@font-face {
  font-family: strymon1;
  src: url("fonts/dinot-regular.otf");
}
@font-face {
  font-family: moonieeyes;
  src: url("fonts/MoonieEyes.otf");
}
@font-face {
  font-family: goldenhills;
  src: url("fonts/GoldenHills.ttf");
}
@font-face {
  font-family: cute;
  src: url("fonts/cute.ttf");
}
@font-face {
  font-family: grapple;
  src: url("fonts/grapple.ttf");
}
@font-face {
  font-family: funky;
  src: url("fonts/TF Funky Fusion Demo.ttf");
}
@font-face {
  font-family: balloon;
  src: url("fonts/balloon.TTF");
}
@font-face {
  font-family: fuzzface;
  src: url("fonts/staccato.TTF");
}
@font-face {
  font-family: compacta;
  src: url("fonts/compacta.ttf");
}

